Major update to support local docker instance, plus separate peloton client api and the elasticsearch ingestor

--- a/pelastic.ini
+++ b/pelastic.ini
@@ -1,8 +1,7 @@
-[peloton]
-username = Your_Peloton_Username_Or_Email
-password = Your_Peloton_Password
-
 [elastic]
+local = yes
+host = localhost
+port = 9200
 id = Your_Elastic_Cloud_ID
 username = Your_Elastic_Cluster_Username
 password = Your_Elastic_Cluster_Password
